Changst to Version 1.0-2

  o Updated the following inadvertently reverted functions (and docs): partial.cor(), numSummary(), Hist(), rcorr.adjust() (following bug report by Mark Dunning).

Changes to Version 1.0-1

  o Added "se(mean)" to numSummary().

Changes to Version 1.0-0

  o First version of the package, with functions moved from the Rcmdr package to make them more conveniently available to other CRAN packages (at the suggestion of Liviu Andronic).
