@@ -8,12 +8,21 @@ Hist <- function(x, groups, scale=c("frequency", "percent", "density"), xlab=dep
     scale <- match.arg(scale)
     ylab
     if (!missing(groups)){
+        counts <- table(groups)
+        if (any(counts == 0)){
+            levels <- levels(groups)
+            warning("the following groups are empty: ", paste(levels[counts == 0], collapse=", "))
+        }
         levels <- levels(groups)
-        hists <- lapply(levels, function(level) hist(x[groups == level], plot=FALSE, breaks=breaks))
-        range.x <- range(unlist(lapply(hists, function(hist) hist$breaks)))
+        hists <- lapply(levels, function(level) if (counts[level] != 0)  
+            hist(x[groups == level], plot=FALSE, breaks=breaks)
+            else list(breaks=NA))
+        range.x <- range(unlist(lapply(hists, function(hist) hist$breaks)), na.rm=TRUE)
         n.breaks <- max(sapply(hists, function(hist) length(hist$breaks)))
         breaks. <- seq(range.x[1], range.x[2], length=n.breaks)
-        hists <- lapply(levels, function(level) hist(x[groups == level], plot=FALSE, breaks=breaks.))
+        hists <- lapply(levels, function(level) if (counts[level] != 0) 
+            hist(x[groups == level], plot=FALSE, breaks=breaks.)
+            else list(counts=0, density=0))
         ylim <- if (scale == "frequency"){
             max(sapply(hists, function(hist) max(hist$counts)))
         }
@@ -23,13 +32,14 @@ Hist <- function(x, groups, scale=c("frequency", "percent", "density"), xlab=dep
         else {
             max.counts <- sapply(hists, function(hist) max(hist$counts))
             tot.counts <- sapply(hists, function(hist) sum(hist$counts))
-            ylims <- tot.counts*(max(max.counts/tot.counts))
+            ylims <- tot.counts*(max(max.counts[tot.counts != 0]/tot.counts[tot.counts != 0]))
             names(ylims) <- levels
             ylims
         }
-        save.par <- par(mfrow=n2mfrow(length(levels)), oma = c(0, 0, if (main != "") 1.5 else 0, 0))
+        save.par <- par(mfrow=n2mfrow(sum(counts != 0)), oma = c(0, 0, if (main != "") 1.5 else 0, 0))
         on.exit(par(save.par))
         for (level in levels){
+            if (counts[level] == 0) next
             if (scale != "percent") Hist(x[groups == level], scale=scale, xlab=xlab, ylab=ylab, 
                 main=paste(deparse(substitute(groups)), "=", level), breaks=breaks., ylim=c(0, ylim), ...)
             else Hist(x[groups == level], scale=scale, xlab=xlab, ylab=ylab, 
