@@ -2,6 +2,8 @@ Changst to Version 1.0-2
 
   o Updated the following inadvertently reverted functions (and docs): partial.cor(), numSummary(), Hist(), rcorr.adjust() (following bug report by Mark Dunning).
 
+  o Hist() reports a warning but doesn't fail for empty groups.
+
 Changes to Version 1.0-1
 
   o Added "se(mean)" to numSummary().
